--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.9",
+        "laravel/telescope": "^5.2",
         "laravel/tinker": "^2.9",
         "spatie/image-optimizer": "^1.8",
         "tymon/jwt-auth": "^2.1.0"
