--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,14 @@
     "require-dev": {
         "fakerphp/faker": "^1.23",
         "friendsofphp/php-cs-fixer": "^3.64",
+        "larastan/larastan": "3.0",
         "laravel/pail": "^1.1",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1",
         "opcodesio/log-viewer": "^3.12.0",
+        "phpstan/phpstan": "^2.0",
         "phpunit/phpunit": "^11.0.1",
         "spatie/laravel-activitylog": "^4.7",
         "spatie/laravel-permission": "^6.0"
@@ -60,7 +62,8 @@
             "Composer\\Config::disableProcessTimeout",
             "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=server,queue,logs,vite"
         ],
-        "fix": "php-cs-fixer fix"
+        "fix": "php-cs-fixer fix",
+        "analyse": "vendor/bin/phpstan analyse"
     },
     "extra": {
         "laravel": {
