--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,11 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.9",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "spatie/image-optimizer": "^1.8",
-        "tymon/jwt-auth": "^2.1.0"
+        "tymon/jwt-auth": "^2.1.0",
+        "symfony/filesystem": "^6.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
