--- a/composer.json
+++ b/composer.json
@@ -21,14 +21,14 @@
     "require-dev": {
         "fakerphp/faker": "^1.23",
         "friendsofphp/php-cs-fixer": "^3.64",
-        "larastan/larastan": "3.0",
+        "larastan/larastan": "v2.9.8",
         "laravel/pail": "^1.1",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1",
         "opcodesio/log-viewer": "^3.12.0",
-        "phpstan/phpstan": "^2.0",
+        "phpstan/phpstan": "1.12.8",
         "phpunit/phpunit": "^11.0.1",
         "spatie/laravel-activitylog": "^4.7",
         "spatie/laravel-permission": "^6.0"
