--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "spatie/image-optimizer": "^1.8",
         "spatie/laravel-permission": "^6.10",
         "symfony/filesystem": "^6.3",
-        "tymon/jwt-auth": "^2.1.0"
+        "tymon/jwt-auth": "^2.1.0",
+        "yajra/laravel-datatables-oracle": "11.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
