--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "yajra/laravel-datatables-oracle": "11.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.14",
         "fakerphp/faker": "^1.23",
         "friendsofphp/php-cs-fixer": "^3.64",
         "larastan/larastan": "v2.9.8",
